# hipaah

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TAXONOMY.md  env.example  pyproject.toml  todo.md
cli/: cli.py
config/sample_policies/: example_policy.yaml
config/schemas/: patient_record.json  sample_patient.json
core/: engine.py  policy_loader.py  schema.py
data/: access_log.jsonl  justification_log.jsonl
hipaah/api/middleware/: __init__.py
hipaah/cli/: cli.py
hipaah/core/: engine.py  policy_loader.py  types.py
hipaah/sdk/js/: README.md  jest.config.js  package-lock.json  package.json
hipaah/sdk/js/coverage/: lcov.info
hipaah/sdk/js/coverage/lcov-report/: index.html
hipaah/sdk/js/coverage/lcov-report/hipaah/: index.html  (+2 more)
hipaah/sdk/js/hipaah/: index.d.ts  index.js  utils.js
hipaah/sdk/js/hipaah/examples/: usage_example.js
hipaah/sdk/js/tests/: api-client.test.js  hipaah-client.test.js  safe-logger.test.js  utils.test.js
hipaah/sdk/js/tests/fixtures/: sample_policy.yaml  sample_resource.json
hipaah/sdk/js/tests/temp/: temp_resource.json
hipaah/sdk/python/: README.md  pyproject.toml  pytest.ini  setup.py
hipaah/sdk/python/hipaah/: __init__.py  clients.py  utils.py
hipaah/sdk/python/hipaah/examples/: usage_example.py
hipaah/sdk/python/tests/: README.md  conftest.py  test_client.py  test_utils.py
hipaah/utils/: logger.py  mask.py  synthetic_data.py
sdk/js/hipaah/: index.js
sdk/python/hipaah/: __init__.py
tests/: __init__.py  conftest.py  test_engine.py
tests/core/: test_engine.py
tests/utils/: test_logger.py  test_mask.py  test_synthetic_data.py
utils/: logger.py  mask.py  synthetic_data.py
(+2 files in other folders)
